buttons in main window will no longer wrap

--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -43,6 +43,9 @@
       }
     }
   }
+  #actions {
+    white-space: nowrap;
+  }
   #status {
     color: $mutedTextColor;
     padding: 10px 0;
